Updated /welcome_message endpoint to /system_message/${messageType} to be able to get any type of system message.
